# ReCoDE-Gene-Network-Analysis

./: .pre-commit-config.yaml  404.html  LICENSE.md  README.md  dev-requirements.txt  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Chapter 1: Background on Single-Cell RNA-Sequencing/: index.html
Chapter 2: Gene Network Analysis/: index.html
Chapter 3: Gene Network Downstream Analysis/: index.html
Chapter 4: Understanding NLP and LLMs/: index.html
data/data/: Bcell_datExpr_pseudobulk.csv
data/dataset/: mic_datExpr_pseudobulk.csv
data/metadata/: Bcell_metadata.csv  Bcell_metadata_pseudobulk.csv  mic_metadata_pseudobulk.csv
data/other/: separated_communities.pkl
docs/: Chapter 1 Background on Single-Cell RNA-Sequencing.md  Chapter 2 Understanding NLP and LLMs.md  Chapter 2: Gene Network Analysis.md  Chapter 3 Extract Gene Networks and Downstream Analysis.md  Chapter 3: Gene Network Downstream Analysis.md  Chapter 4: Understanding NLP and LLMs.md  index.md
notebooks/: process_data.ipynb
notebooks/solutions/: 1.Correlation_Network_Analysis_and_Visualisation_Solution.ipynb  2.Network_Analysis_Solution.ipynb  3.Fisher_Exact_Test_Solution.ipynb  4.SCGPT_Solution.ipynb
notebooks/workbooks/: 1.Correlation_Network_Analysis_and_Visualisation_Workbook.ipynb  2.Network_Analysis_Workbook.ipynb  3.Fisher_Exact_Test_Workbook.ipynb  4.SCGPT_Workbook.ipynb
process_data/: index.html
search/: search_index.json
solutions/2.Network_Analysis_Solution/: index.html
tests/: test_placeholder.py
(+6 files in other folders)
